added main class"livingCreature"

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
    <head>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-       <script src="class.js"></script>
+       <script src="class_Fermer.js"></script>
+       <script src="class_Gishatich.js"></script>
+       <script src="class_Grass.js"></script>
+       <script src="class_MiniVirusGrass.js"></script>
+       <script src="class_VirusGrass.js"></script>
+       <script src="class_Xotaker.js"></script>
        <script src="script.js"></script>
 	   <style>
         div{
